--- a/hubsrht/templates/project-summary.html
+++ b/hubsrht/templates/project-summary.html
@@ -203,5 +203,30 @@
     </div>
     {% endif %}
   </div>
+  {% if current_user and current_user.user_type.value == "admin" %}
+  <div class="row" style="margin-top: 5rem">
+    <div class="col-md-6">
+      <h3>Feature this project</h3>
+      <form action="{{url_for("projects.feature_POST",
+            owner=project.owner.canonical_name,
+            project_name=project.name)}}"
+          method="POST">
+        {{csrf_token()}}
+        <div class="form-group">
+          <textarea
+            class="form-control"
+            name="summary"
+            rows="3"
+            placeholder="Featured project summary"
+          ></textarea>
+        </div>
+        <button
+          type="submit"
+          class="btn btn-primary"
+        >Feature project {{icon('caret-right')}}</button>
+      </form>
+    </div>
+  </div>
+  {% endif %}
 </div>
 {% endblock %}
