project summary: fix closing tag on readme list

--- a/hubsrht/templates/project-summary.html
+++ b/hubsrht/templates/project-summary.html
@@ -198,7 +198,7 @@
           </h3>
         </div>
         {% endfor %}
-      </div>
+      </form>
       {% endif %}
     </div>
     {% endif %}
