--- a/hubsrht/templates/project-summary.html
+++ b/hubsrht/templates/project-summary.html
@@ -5,9 +5,8 @@
 {% endblock %}
 {% block content %}
 <div class="container">
-  {% if not project.checklist_complete
-    and current_user
-    and project.owner_id == current_user.id %}
+  {% if not project.checklist_complete %}
+  {% if current_user and project.owner_id == current_user.id %}
   <div class="row">
     <div class="col-md-12 event-list">
       <form
@@ -111,6 +110,16 @@
       </div>
     </form>
   </div>
+  {% else %}
+  <div class="row">
+    <div class="col-md-12">
+      <div class="alert alert-info">
+        This is a new project, and the author hasn't finished setting it up
+        yet. Come back later?
+      </div>
+    </div>
+  </div>
+  {% endif %}
   {% endif %}
   <div class="row">
     <div class="col-md-12">
@@ -128,16 +137,6 @@
       </div>
     </div>
   </div>
-  {% if not current_user or current_user != owner %}
-  <div class="row">
-    <div class="col-md-12">
-      <div class="alert alert-info">
-        This is a new project. It doesn't have any resources associated with it
-        yet. Come back later?
-      </div>
-    </div>
-  </div>
-  {% endif %}
   <div class="row">
     {% if project.summary_repo_id != None %}
     <div class="col-md-10">
