project-summary: make dismiss button more obvious

--- a/hubsrht/templates/project-summary.html
+++ b/hubsrht/templates/project-summary.html
@@ -99,8 +99,8 @@
         {% if ncomplete == 3 %}
         <div class="alert alert-info">
           <p>
-            <button class="btn btn-link text-muted pull-right" type="submit">
-              dismiss
+            <button class="btn btn-primary pull-right" type="submit">
+              Dismiss {{icon('caret-right')}}
             </button>
             You're all set! If you want to set up more things for your project,
             click "more +" on the top right.
