profile: fix route to user projects

--- a/hubsrht/templates/profile.html
+++ b/hubsrht/templates/profile.html
@@ -61,7 +61,7 @@
         <div class="pull-right">
           <a
             href="{{url_for("users.projects_GET",
-              owner=current_user.canonical_name)}}"
+              owner=user.canonical_name)}}"
             class="btn btn-link"
           >More projects&nbsp;{{icon("caret-right")}}</a>
         </div>
