Ellipsize overflow on events

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -54,6 +54,9 @@
 
     p {
       margin-bottom: 0;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow-x: hidden;
     }
   }
 }
