--- a/hubsrht/templates/project-summary.html
+++ b/hubsrht/templates/project-summary.html
@@ -100,7 +100,8 @@
         <div class="alert alert-info">
           <p>
             <button class="btn btn-primary pull-right" type="submit">
-              Dismiss {{icon('caret-right')}}
+              <span style="position: relative; top: -1px">{{icon('check')}}</span>
+              Done
             </button>
             You're all set! If you want to set up more things for your project,
             click "more +" on the top right.
