Update language on new-user-dashboard.html

--- a/hubsrht/templates/new-user-dashboard.html
+++ b/hubsrht/templates/new-user-dashboard.html
@@ -49,8 +49,7 @@
       <h3>Learn about {{cfg("sr.ht", "site-name")}}</h3>
       <p>
         We have tutorials, detailed documentation for every service, API
-        information, support resources, and more at
-        {{cfg("sr.ht", "site-name")}} man.
+        information, support resources, and more at the manual.
       </p>
       <a
         href="{{get_origin("man.sr.ht", external=True, default="https://man.sr.ht")}}"
