Fix URLs for embedded images in project summaries

--- a/hubsrht/templates/project-summary.html
+++ b/hubsrht/templates/project-summary.html
@@ -158,7 +158,7 @@
       </div>
       {% else %}
       {% if not summary_error %}
-      {{summary | extended_md}}
+      {{summary}}
       {% else %}
       <div class="alert alert-danger">
         An internal error occured fetching the README.md for this project.
