index search tools: d-none by default

--- a/hubsrht/templates/project-index.html
+++ b/hubsrht/templates/project-index.html
@@ -17,7 +17,7 @@
         {% if search_error %}
           <div class="invalid-feedback">{{ search_error }}</div>
         {% endif %}
-        <fieldset class="pull-right d-xs-none" style="margin-top: 0.25rem">
+        <fieldset class="pull-right d-none d-sm-block" style="margin-top: 0.25rem">
           <legend class="inline-legend">Sort results by</legend>
           <div class="form-check form-check-inline">
             <input
