--- a/hubsrht/templates/profile.html
+++ b/hubsrht/templates/profile.html
@@ -7,9 +7,7 @@
 <div class="row">
   <div class="col-md-4">
     <h2>
-      <a
-        href="{{url_for("users.summary_GET", username=user.username)}}"
-      >{{user.canonical_name}}</a>
+      {{user.canonical_name}}
     </h2>
     {% if user.location %}
     <p>{{user.location}}</p>
