Add support for different named READMEs

--- a/hubsrht/templates/project-summary.html
+++ b/hubsrht/templates/project-summary.html
@@ -204,7 +204,7 @@
               class="pull-right btn btn-primary btn-lg"
             >Use README.md&nbsp;{{ icon("caret-right") }}</button>
             <a
-              href="{{repo.url()}"
+              href="{{repo.url()}}"
               target="_blank"
               rel="noopener"
             >{{ repo.name }}</a>
