Implement mailing list removal

--- a/hubsrht/templates/project-config.html
+++ b/hubsrht/templates/project-config.html
@@ -215,6 +215,12 @@
               Delete project {{icon('caret-right')}}
             </button>
           </div>
+          <div class="col-md-9">
+            <label class="checkbox">
+              <input type="checkbox" name="delete-resources" />
+              Permanently delete project resources (repos, mailing lists, etc)
+            </label>
+          </div>
         </div>
       </form>
     </div>
