Fix project deletion
SQLAlchemy's internal cascade handling is the most miserable, broken
piece of shit I have ever had the displeasure of using. So we circumvent
it entirely and let the SQL server do the right thing.

A word of advice: don't use SQLAlchemy for new projects.

--- a/hubsrht/templates/new-user-dashboard.html
+++ b/hubsrht/templates/new-user-dashboard.html
@@ -3,6 +3,9 @@
 <title>{{cfg("sr.ht", "site-name")}} dashboard</title>
 {% endblock %}
 {% block content %}
+{% if notice %}
+<div class="alert alert-info">{{notice}}</div>
+{% endif %}
 <div class="row">
   <div class="col-md-10 offset-md-1" style="margin-top: 1rem; margin-bottom: 1rem;">
     <strong>Welcome to {{cfg("sr.ht", "site-name")}}!</strong>
