--- a/hubsrht/templates/dashboard.html
+++ b/hubsrht/templates/dashboard.html
@@ -4,6 +4,9 @@
 <title>{{cfg("sr.ht", "site-name")}} dashboard</title>
 {% endblock %}
 {% block content %}
+{% if notice %}
+<div class="alert alert-info">{{notice}}</div>
+{% endif %}
 <div class="row">
   <div class="col-md-4">
     <p>
