--- a/hubsrht/templates/trackers-manage.html
+++ b/hubsrht/templates/trackers-manage.html
@@ -6,7 +6,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 event-list">
-      <h3>Manage mailing lists</h3>
+      <h3>Manage trackers</h3>
       <form>
         <input
           name="search"
