--- a/hubsrht/templates/index.html
+++ b/hubsrht/templates/index.html
@@ -20,30 +20,31 @@
       <a href="{{oauth_url}}">
         Log in {{icon('caret-right')}}
       </a>
-      to get started.
+      to get started, or check out some of our featured projects:
     </p>
-    <hr />
-    <h2>Featured projects</h2>
   </div>
 </div>
-<div class="row event-list">
-  {% for feature in features %}
-  <div class="col-md-6">
-    <div class="event">
-      <h5>
-        <span class="text-muted"
-        >{{feature.project.owner.canonical_name}}/</span><a
-          href="{{url_for("projects.summary_GET",
-            owner=feature.project.owner.canonical_name,
-            project_name=feature.project.name)}}"
-        >{{feature.project.name}}</a>
-      </h5>
-      <blockquote>
-        {{feature.summary | md}}
-      </blockquote>
+<div class="row" style="margin-top: 1rem">
+  <div class="col-md-12">
+    <h3>Featured projects</h3>
+    <div class="event-list feature-list">
+      {% for feature in features %}
+      <div class="event">
+        <h5>
+          <span class="text-muted"
+          >{{feature.project.owner.canonical_name}}/</span><a
+            href="{{url_for("projects.summary_GET",
+              owner=feature.project.owner.canonical_name,
+              project_name=feature.project.name)}}"
+          >{{feature.project.name}}</a>
+        </h5>
+        <blockquote>
+          {{feature.summary | md}}
+        </blockquote>
+      </div>
+      {% endfor %}
     </div>
   </div>
-  {% endfor %}
 </div>
 <div class="row">
   <div class="col-md-4 offset-md-8">
