--- a/hubsrht/templates/sources-manage.html
+++ b/hubsrht/templates/sources-manage.html
@@ -45,7 +45,7 @@
             title="This repository is already in use as the project summary"
             {% endif %}
           >
-            Use README.md {{icon('caret-right')}}
+            Use README {{icon('caret-right')}}
           </button>
         </form>
         <a
