--- a/hubsrht/templates/project-create.html
+++ b/hubsrht/templates/project-create.html
@@ -40,7 +40,7 @@
         class="form-control {{valid.cls("description")}}"
         placeholder="Short description of your project, shown in lists"
         required
-        {{description or ""}} />
+        value="{{description or ""}}" />
       {{valid.summary("description")}}
     </div>
     <div class="flex-grow-1 d-flex flex-row justify-content-end">
