--- a/hubsrht/templates/sources-select.html
+++ b/hubsrht/templates/sources-select.html
@@ -74,8 +74,7 @@
           >Select repo&nbsp;{{ icon("caret-right") }}</button>
           {% endif %}
           <a
-            href="{{get_origin("git.sr.ht",
-              external=True)}}/{{ repo["owner"]["canonical_name"] }}/{{repo["name"]}}"
+            href="{{origin}}/{{ repo["owner"]["canonical_name"] }}/{{repo["name"]}}"
             target="_blank"
             rel="noopener"
           >{{ repo["name"] }}</a>
