Add project tags
Ref: ~sircmpwn/hub.sr.ht#19

--- a/hubsrht/templates/featured-projects.html
+++ b/hubsrht/templates/featured-projects.html
@@ -23,6 +23,14 @@
           <blockquote style="margin-top: 0.5rem">
             {{feature.summary | md}}
           </blockquote>
+          {% if project.tags %}
+          <div class="tags">
+          {% for tag in project.tags %}
+            <a href="{{url_for("public.project_index", search="#"+tag)}}"
+               class="tag">#{{tag}}</a>
+          {% endfor %}
+          </div>
+          {% endif %}
         </div>
         {% endfor %}
         {{pagination()}}
