--- a/hubsrht/templates/dashboard.html
+++ b/hubsrht/templates/dashboard.html
@@ -57,6 +57,14 @@
                 project_name=project.name)}}">{{project.name}}</a>
             </h4>
             <p>{{project.description}}</p>
+            {% if project.tags %}
+            <div class="tags">
+            {% for tag in project.tags %}
+              <a href="{{url_for("public.project_index", search="#"+tag)}}"
+                 class="tag">#{{tag}}</a>
+            {% endfor %}
+            </div>
+            {% endif %}
           </div>
           {% endfor %}
         </div>
