--- a/hubsrht/templates/profile.html
+++ b/hubsrht/templates/profile.html
@@ -53,6 +53,15 @@
                 project_name=project.name)}}">{{project.name}}</a>
             </h4>
             <p>{{project.description}}</p>
+            {% if project.tags %}
+            <div class="tags">
+            {% for tag in project.tags %}
+              <a href="{{url_for("public.project_index",
+                    search=((search or "").strip() + " #"+tag).lstrip())}}"
+                 class="tag">#{{tag}}</a>
+            {% endfor %}
+            </div>
+            {% endif %}
           </div>
           {% endfor %}
         </div>
