--- a/hubsrht/templates/project-index.html
+++ b/hubsrht/templates/project-index.html
@@ -12,8 +12,8 @@
           name="search"
           type="text"
           placeholder="Search all public projects"
-          class="form-control {% if search_error %} is-invalid{% endif %}"
-          value="{{search if search else ""}}" />
+          class="form-control {% if search_error %}is-invalid{% endif %}"
+          value="{{search or ""}}" />
         {% if search_error %}
           <div class="invalid-feedback">{{ search_error }}</div>
         {% endif %}
@@ -68,6 +68,14 @@
             >{{project.name}}</a>
           </h4>
           <p>{{project.description}}</p>
+          {% if project.tags %}
+          <div class="tags">
+          {% for tag in project.tags %}
+            <a href="{{url_for("public.project_index", search="#"+tag)}}"
+               class="tag">#{{tag}}</a>
+          {% endfor %}
+          </div>
+          {% endif %}
         </div>
         {% endfor %}
       </div>
@@ -84,6 +92,15 @@
               owner=feature.project.owner.canonical_name,
               project_name=feature.project.name)}}"
           >{{feature.project.name}}</a>
+          {% if feature.project.tags %}
+          <span class="tags pull-right">
+          {% for tag in feature.project.tags %}
+            <a href="{{url_for("public.project_index",
+                  search=((search or "").strip() + " #"+tag).lstrip())}}"
+               class="tag">#{{tag}}</a>
+          {% endfor %}
+          </span>
+          {% endif %}
         </h5>
         <blockquote style="margin-top: 0.5rem">
           {{feature.summary | md}}
