--- a/hubsrht/templates/index.html
+++ b/hubsrht/templates/index.html
@@ -41,9 +41,9 @@
         <blockquote>
           {{feature.summary | md}}
         </blockquote>
-        {% if project.tags %}
+        {% if feature.project.tags %}
         <div class="tags">
-        {% for tag in project.tags %}
+        {% for tag in feature.project.tags %}
           <a href="{{url_for("public.project_index", search="#"+tag)}}"
              class="tag">#{{tag}}</a>
         {% endfor %}
