Add link to tag best practices

--- a/hubsrht/templates/project-config.html
+++ b/hubsrht/templates/project-config.html
@@ -41,7 +41,14 @@
                 id="tags"
                 name="tags"
                 placeholder="Up to three comma-separated topics"
-                value="{{tags or ", ".join(project.tags)}}" />
+                value="{{tags or ", ".join(project.tags)}}"
+                aria-describedBy="tags-help" />
+              <small class="form-text text-muted" id="tag-help">
+                <a
+                  href="https://man.sr.ht/hub.sr.ht/#best-practices-for-tags"
+                  rel="noopener"
+                >Best practices for tags {{icon('external-link-alt')}}</a>
+              </small>
               {{valid.summary("tags")}}
             </div>
             <div class="form-group">
