--- a/hubsrht/templates/project-create.html
+++ b/hubsrht/templates/project-create.html
@@ -51,7 +51,14 @@
         name="tags"
         class="form-control {{valid.cls("tags")}}"
         placeholder="Up to three comma-separated topics"
-        value="{{", ".join(tags) or ""}}" />
+        value="{{", ".join(tags) or ""}}"
+        aria-describedBy="tag-help" />
+      <small class="form-text text-muted" id="tag-help">
+        <a
+          href="https://man.sr.ht/hub.sr.ht/#best-practices-for-tags"
+          rel="noopener"
+        >Best practices for tags {{icon('external-link-alt')}}</a>
+      </small>
       {{valid.summary("tags")}}
     </div>
     <div class="flex-grow-1 d-flex flex-row justify-content-end">
