De-emphasize tags in project lists

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -136,8 +136,14 @@
   }
 }
 
-.tags .tag:not(:last-child) {
-  margin-right: 0.5rem;
+.tags {
+  a {
+    @extend .text-muted;
+  }
+
+  .tag:not(:last-child) {
+    margin-right: 0.5rem;
+  }
 }
 
 .event-list .event p {
