--- a/hubsrht/templates/profile.html
+++ b/hubsrht/templates/profile.html
@@ -41,7 +41,7 @@
     {% endif %}
   </div>
   <div class="col-md-8">
-    {% if projects %}
+    {% if projects and page == 1 %}
     <div class="row">
       <div class="col-md-12">
         <form action="{{url_for("users.projects_GET",
