Don't hide projects which didn't complete checklist
The UX here is pretty bad and at least a third of users are unaware that
they need to complete the checklist to publish their project.

--- a/hubsrht/templates/project-summary.html
+++ b/hubsrht/templates/project-summary.html
@@ -99,17 +99,10 @@
         {% if ncomplete == 3 %}
         <div class="alert alert-info">
           <p>
-            {% if project.visibility.value == "public" %}
             <button class="btn btn-primary pull-right" type="submit">
-              Publish project
+              All done!
               <span style="position: relative; top: -1px">{{icon('caret-right')}}</span>
             </button>
-            {% else %}
-            <button class="btn btn-primary pull-right" type="submit">
-              <span style="position: relative; top: -1px">{{icon('check')}}</span>
-              Done
-            </button>
-            {% endif %}
             You're all set! If you want to set up more things for your project,
             click "more +" on the top right.
           </p>
@@ -117,15 +110,6 @@
         {% endif %}
       </div>
     </form>
-  </div>
-  {% else %}
-  <div class="row">
-    <div class="col-md-12">
-      <div class="alert alert-info">
-        This is a new project, and the author hasn't finished setting it up
-        yet. Come back later?
-      </div>
-    </div>
   </div>
   {% endif %}
   {% endif %}
