Update wording on dashboard page
To encourage users to feel like a part of sr.ht

--- a/hubsrht/templates/dashboard.html
+++ b/hubsrht/templates/dashboard.html
@@ -10,9 +10,8 @@
 <div class="row">
   <div class="col-md-4">
     <p>
-      Welcome back, {{current_user.username}}!
-      This is the {{cfg("sr.ht", "site-name")}} hub service, which organizes
-      and indexes projects and users on the platform.
+      Welcome back, {{current_user.username}}! This is your project hub, which
+      organizes and indexes projects for users on our platform.
     </p>
     <div style="margin-bottom: 1rem">
       <a
