--- a/hubsrht/templates/project-summary.html
+++ b/hubsrht/templates/project-summary.html
@@ -149,7 +149,9 @@
       </div>
       {% else %}
       {% if not summary_error %}
-      {{summary}}
+      <div class="readme">
+        {{summary}}
+      </div>
       {% else %}
       <div class="alert alert-danger">
         An internal error occured fetching the README for this project.
