--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,22 +1,35 @@
 @import "base";
+$darker: darken($gray-900, 6);
 
 .btn-white {
   @extend .btn;
-  background: $white;
   padding: 0.25rem 0;
   font-size: 0.9rem;
-  border-color: $gray-500;
-  color: $gray-900 !important;
 
-  &.btn-sm {
-    padding: 0.2rem 0.25rem;
-  }
+  border-color: $gray-500;
+  background: $white;
+  color: $gray-900 !important;
 
   &:hover {
     background: $white;
     color: $black !important;
     text-decoration: none;
     border-color: $gray-900;
+  }
+
+  @media(prefers-color-scheme: dark) {
+    background: $darker;
+    color: $white !important;
+
+    &:hover {
+      background: $gray-900;
+      color: $white !important;
+      border-color: $gray-400;
+    }
+  }
+
+  &.btn-sm {
+    padding: 0.2rem 0.25rem;
   }
 
   transition: border-color 0.2s linear;
