--- a/hubsrht/templates/sources-select.html
+++ b/hubsrht/templates/sources-select.html
@@ -30,6 +30,7 @@
           value="{{ description or project.description }}" />
         {{valid.summary("description")}}
       </div>
+      {{valid.summary()}}
     </div>
     <button type="submit" class="btn btn-primary" name="create">
       Create new {{vcs}} repository {{ icon("caret-right") }}
