project-nav.html: fix link macro for jinja2 3.0.0

--- a/hubsrht/templates/project-nav.html
+++ b/hubsrht/templates/project-nav.html
@@ -3,7 +3,7 @@
     href="{{url_for("users.summary_GET", username=owner.username)}}"
   >{{owner.canonical_name}}</a>/<wbr>{{project.name}}
 </h2>
-{% macro link(path, title, alternates, cls="") %}
+{% macro link(path, title, alternates=[], cls="") %}
 <a
   class="nav-link {% if view == title or view in alternates %}active{% endif %} {{cls}}"
   href="{{ path }}">{{ title }}</a>
