--- a/hubsrht/templates/tracker-new.html
+++ b/hubsrht/templates/tracker-new.html
@@ -27,11 +27,8 @@
           class="form-control {{valid.cls("description")}}"
           rows="5"
           aria-describedby="description-help-text"
-          placeholder="Give users an idea of how to submit a good ticket for this tracker."
+          placeholder="Give users an idea of how to submit a good ticket for this tracker. Markdown supported"
         >{{ description or "" }}</textarea>
-        <small id="description-help-text" class="form-text text-muted pull-left">
-          Markdown supported
-        </small>
         {{valid.summary("description")}}
       </div>
     </div>
