--- a/hubsrht/templates/mailing-list-new.html
+++ b/hubsrht/templates/mailing-list-new.html
@@ -10,10 +10,7 @@
     <h3>Use a common template</h3>
     <fieldset class="form-group">
       <div class="form-check">
-        <label
-          class="form-check-label"
-          title="Only visible to you and your collaborators"
-        >
+        <label class="form-check-label">
           <input
             class="form-check-input"
             type="radio"
@@ -27,10 +24,7 @@
         </label>
       </div>
       <div class="form-check">
-        <label
-          class="form-check-label"
-          title="Visible to anyone with the link, but not shown on your profile"
-        >
+        <label class="form-check-label">
           <input
             class="form-check-input"
             type="radio"
