Remove whitespace after project description

--- a/hubsrht/templates/project-base.html
+++ b/hubsrht/templates/project-base.html
@@ -7,9 +7,7 @@
 </div>
 {% if project.description %}
 <div class="header-extension">
-  <div class="container">
-    {{ project.description }}
-  </div>
+  <div class="container">{{ project.description }}</div>
 </div>
 {% endif %}
 {% block content %}
