trackers: configure with visibility
Following the introduction of visibility parameters to todo.sr.ht.

Fixes ~sircmpwn/hub.sr.ht#75

--- a/hubsrht/templates/tracker-new.html
+++ b/hubsrht/templates/tracker-new.html
@@ -6,9 +6,7 @@
 <div class="row">
   <form class="col-lg-8" method="POST">
     {{csrf_token()}}
-    <h3 style="margin-top: 1rem">
-      Create a new ticket tracker
-    </h3>
+    <h3>Create a new ticket tracker</h3>
     <div class="form-group">
       <label for="{{ typename }}">Name</label>
       <input
