--- a/hubsrht/templates/project-config.html
+++ b/hubsrht/templates/project-config.html
@@ -72,7 +72,7 @@
                     class="form-check-input"
                     type="radio"
                     name="visibility"
-                    {% if project.visibility.value == "public" %}
+                    {% if (visibility and visibility == "public") or project.visibility.value == "public" %}
                     checked
                     {% endif %}
                     value="public"> Public
@@ -90,7 +90,7 @@
                     class="form-check-input"
                     type="radio"
                     name="visibility"
-                    {% if project.visibility.value == "unlisted" %}
+                    {% if (visibility and visibility == "unlisted") or project.visibility.value == "unlisted" %}
                     checked
                     {% endif %}
                     value="unlisted"> Unlisted
@@ -108,7 +108,7 @@
                     class="form-check-input"
                     type="radio"
                     name="visibility"
-                    {% if project.visibility.value == "private" %}
+                    {% if (visibility and visibility == "private") or project.visibility.value == "private" %}
                     checked
                     {% endif %}
                     value="private"> Private
